--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,13 +1,119 @@
-<div class="navbar">
-    <div class="container">
-        <div class="navbar-container">
-            <h2>App title</h2>
-            <nav>
-                <ul class="navbar-ul">
-                    <li class="navbar-li">Home</li>
-                    <li class="navbar-li">Settings</li>
-                </ul>
-            </nav>
+<nav class="flex w-full h-12 px-5 items-center border-b justify-between fixed z-20" style="background-color: white;">
+    <div class="flex items-center">
+        <Link href="/">
+            <h2 class="text-2xl font-semibold cursor-pointer">Cheers.</h2>
+        </Link>
+        <div
+            ref={searchIconRef}
+            class="lg:hidden md:hidden sm:flex items-center justify-center ml-4 h-8 w-8 rounded-full cursor-pointer"
+        >
+            <MdSearch size={22} />
+        </div>
+        <!-- {showFloatingSearchBar && <FloatingSearchBar />} -->
+    </div>
+
+    <div class="lg:w-1/4 md:w-1/3 lg:block md:block sm:hidden h-full items-center justify-center p-2">
+        <div class="w-full h-full flex relative">
+            <input
+                class="bg-transparent h-full focus:outline-none text-sm border bg-white pl-2 rounded-l-md pr-2"
+                style="width:91%;"
+                placeholder="Search"
+            />
+            <div class="bg-black w-8 h-full flex-auto cursor-pointer rounded-r-md border border-black hover:bg-gray-700 flex items-center justify-center absolute top-0 right-0 bottom-0 active:bg-gray-500">
+                <MdSearch color="#f8f8f8" size={18} />
+            </div>
         </div>
     </div>
-</div>
+
+    <ul class="lg:flex md:flex sm:hidden justify-end w-1/4 h-full">
+        <a href="/">
+            <% if(activePage === "HOME") { %>
+                <li class="lg:w-full md:w-full border-b-4 border-black h-full flex items-center justify-center cursor-pointer hover:bg-white py-0 px-8">
+                    <span style="font-size: 1rem;">
+                        <i class="fas fa-home"></i>
+                    </span>
+                </li>
+            <% } else { %>
+                <li class="lg:w-full md:w-full border-b-4 border-transparent h-full flex items-center justify-center cursor-pointer hover:bg-white py-0 px-8">
+                    <span style="font-size: 1rem;">
+                        <i class="fas fa-home"></i>
+                    </span> 
+                </li>
+            <% } %>
+        </a>
+
+        <a href="/profile/reservations">
+            <% if(activePage === "RESERVATIONS") { %>
+                <li class="lg:w-full md:w-full border-b-4 border-black h-full flex items-center justify-center cursor-pointer hover:bg-white py-0 px-8">
+                    <span style="font-size: 1rem;">
+                        <i class="fas fa-calendar-week"></i>
+                    </span>
+                </li>
+            <% } else { %>
+                <li class="lg:w-full md:w-full border-b-4 border-transparent h-full flex items-center justify-center cursor-pointer hover:bg-white py-0 px-8">
+                    <span style="font-size: 1rem;">
+                        <i class="fas fa-calendar-week"></i>
+                    </span>
+                </li>
+            <% } %>
+        </a>
+    </ul>
+
+    <div class="items-center lg:flex md:flex sm:hidden">
+                <Link href="/profile/settings">
+                    <div
+                        class="flex items-center cursor-pointer hover:bg-gray-200 p-1 rounded-md transition-all active:bg-gray-400"
+                    >
+                        <div class="rounded-full h-8 w-8 bg-black mr-2 overflow-hidden">
+                            <span>
+                                <!-- {session && (
+                                    <Image
+                                        src={`${session.user && session.user.image}`}
+                                        alt="profile"
+                                        width={40}
+                                        height={40}
+                                        objectFit="cover"
+                                    />
+                                )} -->
+                            </span>
+                        </div>
+                        <p class="text-sm">{session.user && session.user.name}</p>
+                    </div>
+                </Link>
+                <div class="flex items-center relative">
+                    <div
+                        class="ml-3 w-6 h-6 cursor-pointer rounded-full hover:bg-gray-200 transition-all"
+                    >
+                        <MdArrowDropDown size={24} />
+                    </div>
+                    <!-- Settings Pop Up -->
+                        <!-- <SettingsPopUp setShowSettingsPopUp={setShowSettingsPopUp} /> -->
+                    <!-- Settings Pop Up -->
+                </div>
+
+                <!-- guest -->
+                <p class="text-sm">Guest</p>
+                <Link href="/login">
+                    <p class="text-sm rounded-md ml-4 cursor-pointer hover:bg-black active:bg-gray-700 hover:text-white transition-all p-1 px-3 border-black border">
+                        Log in
+                    </p>
+                </Link>
+                <!--  -->
+    </div>
+
+    <div class="lg:hidden md:hidden sm:flex items-center">
+        <div
+            ref={hamburgerMenuRef}
+            class="mr-3 cursor-pointer p-2 rounded-md transition-all"
+        >
+            <GiHamburgerMenu size={24} />
+        </div>
+        <!-- {showFullScreenNavBar && <NavBarFullScreen setShowNavBarFullScreen={setShowFullScreenNavBar} />} -->
+        <div
+            class="rounded-full h-8 w-8 bg-black cursor-pointer overflow-hidden"
+        >
+            <!-- <span>{session && <Image src={`${session?.user?.image}`} alt="profile" width={40} height={40} objectFit="cover" />}</span> -->
+        </div>
+        <!-- {showSettingsPopUp && currentActiveSettings === 1 && <SettingsPopUp setShowSettingsPopUp={setShowSettingsPopUp} />} -->
+    </div>
+</nav>
