--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,5 +16,8 @@
     <header>
         <%- include('partials/navbar.ejs') %>
     </header>
+    <main class="lg:container md:mx-5 sm:mx-5 lg:mx-auto h-full py-16 flex flex-col items-center">
+        <%- include('partials/featuredBar.ejs') %>
+    </main>
 </body>
 </html>
