--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,15 +9,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" href="/out.css">
+    <link rel="stylesheet" href="/out.css"/>
+    <link rel="stylesheet" href="/globals.css"/>
     <title>Home</title>
 </head>
 <body>
     <header>
         <%- include('partials/navbar.ejs') %>
     </header>
-    <main class="lg:container md:mx-5 sm:mx-5 lg:mx-auto h-full py-16 flex flex-col items-center">
+    <main class="lg:container md:mx-5 sm:mx-5 lg:mx-auto h-full py-16 flex flex-col items-center" >
         <%- include('partials/featuredBar.ejs') %>
+
+        <div class="lg:items-end mt-10 pb-5 pt-2 lg:container md:container sm:mx-5 lg:flex-row lg:justify-between md:flex-col md:w-full md:items-center md:justify-center sm:flex-col sm:w-full sm:items-center sm:justify-center sm:hidden md:hidden lg:flex"> 
+            <%- include('partials/filter.ejs') %>
+        </div>
+        
+        <div class="lg:hidden md:flex sm:flex w-full mt-10">
+            <button class="border border-black w-full py-2 px-5 rounded-md hover:bg-black hover:text-white transition-all" id="filtersButton">
+                Filters
+            </button>
+        </div>
+
+        <%- include('partials/filterModal.ejs') %>
+        
     </main>
+
+<script src="/scripts/cursorOutsideElement.js"></script>
+<script>
+    const filtersButton = document.getElementById("filtersButton");
+    const filterModal = document.getElementById("filterModal");
+    const filterModalDiv = document.getElementById("filterModalDiv");
+    const cancelButtonContainer = document.getElementById("cancelButtonContainer");
+    
+    filtersButton.addEventListener("click", () => {
+        filterModal.classList.remove("hidden");
+        cancelButtonContainer.classList.remove("hidden");  
+        cursorOutsideElement(filterModalDiv, filterModal);
+    })
+
+    const cancelButtonClickHandler = () => {
+        filterModal.classList.add("hidden");
+    }
+
+
+</script>
+
 </body>
 </html>
